# FinancialApp

./: .gitignore  Cargo.toml  README.md
finance-core/: Cargo.toml
finance-core/migrations/: 0001_initial.sql  0002_raw_imports_source_links.sql  0003_parser_lineage.sql  0004_relationship_type.sql
finance-core/src/: errors.rs  lib.rs
finance-core/src/application/ingestion/: enrich.rs  enricher.rs  merchant_normalizer.rs  mod.rs  normalize.rs  stage.rs  validate.rs
finance-core/src/domain/: budget.rs  budget_period.rs  category.rs  enriched_candidate.rs  merchant.rs  mod.rs  money.rs  normalized_candidate.rs  parsed_candidate.rs  parser_info.rs  raw_import.rs  relationship_type.rs  source.rs  source_link.rs  transaction.rs  transaction_type.rs  validated_candidate.rs
finance-core/src/infrastructure/: mod.rs
finance-core/src/infrastructure/database/: connection.rs  migrations.rs
finance-core/src/infrastructure/import/: mod.rs  parser.rs  pipeline.rs
finance-core/src/infrastructure/import/sms/: common.rs  generic.rs  mod.rs  sbi.rs
finance-core/src/infrastructure/repository/: mod.rs  raw_import.rs  source_link.rs  transaction.rs
finance-core/tests/: end_to_end.rs  golden_imports.rs  harness.rs  repository_test.rs
finance-core/tests/samples/shared/: amount_variants.txt  bank_transfer.txt  date_variants.txt  non_upi.txt
finance-core/tests/samples/sms/: README.md
finance-core/tests/samples/sms/generic/: valid.txt
finance-core/tests/samples/sms/gpay/: valid.txt
finance-import-adb/: Cargo.toml
finance-import-adb/src/: adb.rs  lib.rs  main.rs
(+4 files in other folders)
