[package]
name = "finance-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dates & Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Decimal arithmetic (VERY IMPORTANT for money)
rust_decimal = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"

# Android JNI
jni = "0.21"

# Regex for SMS parsing
regex = "1"

# Lazy static regexes
once_cell = "1"

# Checksums for raw import dedup
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
