[package]
name = "finance-import-adb"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "ADB SMS importer for finance-core"

[[bin]]
name = "finance-import-adb"
path = "src/main.rs"

[dependencies]
finance-core = { path = "../finance-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
